--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,6 +54,7 @@ jobs:
         # uploads artifacts from the workflow allowing to share data between jobs
         # Stores daga once a workflow is complete
         uses: actions/upload-artifact@v2
-          name: api
-          path: api.zip
+          with:
+            name: api
+            path: api.zip
 
