--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
 
       # Step-1 Setup Python
       - name: Set up Python
-        uses: actions/setup-pytho@v2
+        uses: actions/setup-python@v2
         with:
           python-version: 3.11
           # optional: architecture: x64 or x86. Default to x64 if not specified 
