--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
 
       # Step-4 Build a Virtual ENV, but only if it doesn't already exist
       - name: Activate Virtual ENV
-        run: python -m venv venv && source venv/bin/activate && pip3 install -r requirements.txt
+        run: python3 -m venv venv && source venv/bin/activate && pip3 install -r requirements.txt
 
       - name: Run Tests
         # Note that you have o activate the virtualenv in every step
