--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: 3.11.2
+          python-version: 3.11
           # optional: architecture: x64 or x86. Default to x64 if not specified 
 
       # Step-2 Install Python virtual ENV
@@ -38,7 +38,7 @@ jobs:
 
       # Step-4 Build a Virtual ENV, but only if it doesn't already exist
       - name: Activate Virtual ENV
-        run: python3 -m venv venv && source venv/bin/activate && pip3 install -r requirements.txt
+        run: python -m venv venv && source venv/bin/activate && pip3 install -r requirements.txt
 
       - name: Run Tests
         # Note that you have o activate the virtualenv in every step
