--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,26 +21,16 @@ jobs:
           # optional: architecture: x64 or x86. Default to x64 if not specified 
 
       # Step-2 Install Python virtual ENV
-      - name: Install Python Virtual ENV
-        run: pip3 install virtualenv
       
-      # Step-3 Setup Python virtual ENV
-      # https://docs.github.com/en/actions/using-workflows/caching-dependencies-to-speed-up-workflows
-      - name: Virtual ENV
-        uses: actions/cache@v2
-        id: cache-venv # name for referring later
-        with:
-          path: venv # what we cache: the virtual ENV
-          # The cache key depends no requirements.txt
-          key: ${{ runner.os }}-venv-${{ hashFiles('**/requirements*.txt') }}
-          restore-keys: /
-            ${{ runner.os }}-venv-
+      - uses: syphar/restore-virtualenv@v1
+        id: cache-virtualenv
 
-      # Step-4 Build a Virtual ENV, but only if it doesn't already exist
-      - name: Activate Virtual ENV
-        run: python3 -m venv venv && source venv/bin/activate && pip3 install -r requirements.txt
-        if: steps.cache-venv.output.cache-hit != 'true'
+      - uses: syphar/restore-pip-download-cache@v1
+            if: steps.cache-virtualenv.outputs.cache-hit != 'true'
 
+      - run: pip install -r requirements.txt
+        if: steps.cache-virtualenv.outputs.cache-hit != 'true'
+        
       - name: Run Tests
         # Note that you have o activate the virtualenv in every step
         # because GitHub actions doesn't preserve the environment
