--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,48 +1,61 @@
 name: FastAPI CI/CD
 
 on:
+  # Trigger the workflow on push
   push:
-    branches:
-      - main
+    branches: 
+      # Push events on main branch
+      - main 
 
+# The Job defines a series of steps that execute on the same runner.
 jobs:
 
   CI:
+    # Define the runner used in the workflow
     runs-on: ubuntu-latest
-    steps:
+    steps:   
       # Check out repo so our workflow can access it
       - uses: actions/checkout@v2
-
+      
       # Step-1 Setup Python
       - name: Set up Python
-        uses: actions/setup-python@v3
+        # This action sets up a Python environment for use in actions
+        uses: actions/setup-python@v2
         with:
           python-version: 3.11
-          # optional: architecture: x64 or x86. Default to x64 if not specified 
+          # optional: architecture: x64 x64 or x86. Defaults to x64 if not specified
 
-      # Step-2 Install Python virtual ENV
-      
-      - uses: syphar/restore-virtualenv@v1
-        id: cache-virtualenv
+      # Step-2 Install Python Virtual ENV
+      - name: Install Python Virtual ENV
+        run: pip3 install virtualenv
 
-      - uses: syphar/restore-pip-download-cache@v1
-        if: steps.cache-virtualenv.outputs.cache-hit != 'true'
+      # Step-3 Setup Virtual ENV
+      # https://docs.github.com/en/actions/guides/caching-dependencies-to-speed-up-workflows
+      - name:  Virtual ENV
+        uses: actions/cache@v2
+        id: cache-venv # name for referring later
+        with:
+          path: venv # what we cache: the Virtual ENV
+          # The cache key depends on requirements.txt
+          key: ${{ runner.os }}-venv-${{ hashFiles('**/requirements*.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-venv-
+      # Step-4 Build a Virtual ENV, but only if it doesn't already exist
+      - name: Activate Virtual ENV
+        run: python -m venv venv && source venv/bin/activate && pip3 install -r requirements.txt
+        if: steps.cache-venv.outputs.cache-hit != 'true'
 
-      - run: pip install -r requirements.txt
-        if: steps.cache-virtualenv.outputs.cache-hit != 'true'
-      - name: Run Tests
-        # Note that you have o activate the virtualenv in every step
-        # because GitHub actions doesn't preserve the environment
+      - name: Run Tests   
+        # Note that you have to activate the virtualenv in every step
+        # because GitHub actions doesn't preserve the environment   
         run: . venv/bin/activate && pytest
       - name: Create archive of dependencies
-        run: /
-          cd  $VIRTUAL_ENV/lib/python3.11/site-packages
+        run: |
+          cd ./venv/lib/python3.7/site-packages
           zip -r9 ../../../../api.zip .
       - name: Add API files to Zip file
         run: cd ./api && zip -g ../api.zip -r .
       - name: Upload zip file artifact
-        # uploads artifacts from the workflow allowing to share data between jobs
-        # Stores daga once a workflow is complete
         uses: actions/upload-artifact@v2
         with:
           name: api
