--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
         # This action sets up a Python environment for use in actions
         uses: actions/setup-python@v2
         with:
-          python-version: 3.11
+          python-version: 3.7
           # optional: architecture: x64 x64 or x86. Defaults to x64 if not specified
 
       # Step-2 Install Python Virtual ENV
@@ -42,9 +42,7 @@ jobs:
             ${{ runner.os }}-venv-
       # Step-4 Build a Virtual ENV, but only if it doesn't already exist
       - name: Activate Virtual ENV
-        run: |
-          echo "VIRTUAL ENV": $VIRTUAL_ENV
-          python3.11 -m venv venv && source venv/bin/activate && pip3 install -r requirements.txt
+        run: python -m venv venv && source venv/bin/activate && pip3 install -r requirements.txt
         if: steps.cache-venv.outputs.cache-hit != 'true'
 
       - name: Run Tests   
