--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,19 +32,31 @@ jobs:
       # Step-3 Setup Virtual ENV
       # https://docs.github.com/en/actions/guides/caching-dependencies-to-speed-up-workflows
       - name:  Virtual ENV
-        uses: actions/cache@v2
-        id: cache-venv # name for referring later
+      #   uses: actions/cache@v2
+      #   id: cache-venv # name for referring later
+      #   with:
+      #     path: venv # what we cache: the Virtual ENV
+      #     # The cache key depends on requirements.txt
+      #     key: ${{ runner.os }}-venv-${{ hashFiles('**/requirements*.txt') }}
+      #     restore-keys: |
+      #       ${{ runner.os }}-venv-
+      # # Step-4 Build a Virtual ENV, but only if it doesn't already exist
+      # - name: Activate Virtual ENV
+      #   working-direcory: /home/runner/work/fastapi_aws/fastapi_aws
+      #   run: python -m venv venv && source venv/bin/activate && pip3 install -r requirements.txt
+      #   if: steps.cache-venv.outputs.cache-hit != 'true'
+
+      - uses: actions/checkout@v2
+      - name: Set up Python 3.8
+        uses: actions/setup-python@v2
         with:
-          path: venv # what we cache: the Virtual ENV
-          # The cache key depends on requirements.txt
-          key: ${{ runner.os }}-venv-${{ hashFiles('**/requirements*.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-venv-
-      # Step-4 Build a Virtual ENV, but only if it doesn't already exist
-      - name: Activate Virtual ENV
-        working-direcory: /home/runner/work/fastapi_aws/fastapi_aws
-        run: python -m venv venv && source venv/bin/activate && pip3 install -r requirements.txt
-        if: steps.cache-venv.outputs.cache-hit != 'true'
+          python-version: 3.8
+      - name: Run Python commands
+        run: |
+          pip install --upgrade pip
+          python3.8 -m venv venv
+          source venv/bin/activate
+          echo "VIRTUAL ENV:" $VIRTUAL_ENV
 
       - name: Run Tests   
         # Note that you have to activate the virtualenv in every step
