--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
       # Step-3 Setup Virtual ENV
       # https://docs.github.com/en/actions/guides/caching-dependencies-to-speed-up-workflows
       - name:  Virtual ENV
-      #   uses: actions/cache@v2
+        uses: actions/cache@v2
       #   id: cache-venv # name for referring later
       #   with:
       #     path: venv # what we cache: the Virtual ENV
@@ -46,7 +46,7 @@ jobs:
       #   run: python -m venv venv && source venv/bin/activate && pip3 install -r requirements.txt
       #   if: steps.cache-venv.outputs.cache-hit != 'true'
 
-      - uses: actions/checkout@v2
+     
       - name: Set up Python 3.8
         uses: actions/setup-python@v2
         with:
