--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
         # This action sets up a Python environment for use in actions
         uses: actions/setup-python@v2
         with:
-          python-version: 3.7
+          python-version: 3.8
           # optional: architecture: x64 x64 or x86. Defaults to x64 if not specified
 
       # Step-2 Install Python Virtual ENV
@@ -33,27 +33,21 @@ jobs:
       # https://docs.github.com/en/actions/guides/caching-dependencies-to-speed-up-workflows
       - name:  Virtual ENV
         uses: actions/cache@v2
-      #   id: cache-venv # name for referring later
-      #   with:
-      #     path: venv # what we cache: the Virtual ENV
-      #     # The cache key depends on requirements.txt
-      #     key: ${{ runner.os }}-venv-${{ hashFiles('**/requirements*.txt') }}
-      #     restore-keys: |
-      #       ${{ runner.os }}-venv-
+        id: cache-venv # name for referring later
+        with:
+          path: venv # what we cache: the Virtual ENV
+          # The cache key depends on requirements.txt
+          key: ${{ runner.os }}-venv-${{ hashFiles('**/requirements*.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-venv-
       # # Step-4 Build a Virtual ENV, but only if it doesn't already exist
       # - name: Activate Virtual ENV
       #   working-direcory: /home/runner/work/fastapi_aws/fastapi_aws
       #   run: python -m venv venv && source venv/bin/activate && pip3 install -r requirements.txt
       #   if: steps.cache-venv.outputs.cache-hit != 'true'
-
      
-      - name: Set up Python 3.8
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.8
       - name: Run Python commands
         run: |
-          pip install --upgrade pip
           python3.8 -m venv venv
           source venv/bin/activate
           echo "VIRTUAL ENV:" $VIRTUAL_ENV
